<resources>
    <string name="app_name">Medicine Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text_one">Search Medicine</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="title_create_account">Create New Account</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_location">Your location</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="create_button_text">Continue</string>
    <string name="error_name">name can not be empty</string>
    <string name="error_email">Invalid email</string>
    <string name="error_number">Must be more then 11 letter</string>
    <string name="error_address">Must write your address</string>
    <string name="error_dob">Write your birth date</string>
    <string name="error_post">Post can not be empty</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_page_subtitle">This is a Placeholder text</string>
    <string name="login_error_msg">Oh no! Your account or password is incorrect, please check again.</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password!</string>
    <string name="you_don_t_have_an_account">You don’t have an account?</string>
    <string name="recover">Please enter your Email so we can help you recover your password.</string>
    <string name="next">Next</string>
    <string name="verification_title">Verification</string>
    <string name="verification_text">Enter the OTP code from the phone we just sent you.</string>
    <string name="verification_error">Oh no! You entered wrong OTP code, please check it again.</string>
    <string name="otp_text">Didn’t receive OTP code!</string>
    <string name="resend">Resend</string>
    <string name="submit">Submit</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_subtitle">Enter your new password and confirm.</string>
    <string name="done">Done</string>
    <string name="password">New password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="confirm_pass_text">Password are not same</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="medicine_list">Medicine List</string>
    <string name="expire_medicine">Expire Medicine</string>
    <string name="employee">Employee</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="company">Company </string>
    <string name="details">Details</string>
    <string name="price">Price</string>
    <string name="expire_date">Expire Date</string>
    <string name="self">Self</string>
    <string name="row">Row</string>
    <string name="column">Column</string>
    <string name="error_medicine_name">Medicine name can not empty </string>
    <string name="error_company_name">Company name can not empty</string>
    <string name="error_details">Add medicine details</string>
    <string name="error_expire_date">Expire date can not empty</string>
    <string name="error_price">Price can not empty</string>
    <string name="error_self">Self can not empty</string>
    <string name="error_row">Row can not empty</string>
    <string name="error_column">Column can not empty</string>
    <string name="medicine_name">Medicine name:</string>
    <string name="company_name">Company name:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="order_medicine">Order Medicine</string>
    <string name="email">Email :</string>
    <string name="employee_list">Employee List</string>
    <string name="employee_name">Employee Name</string>
    <string name="hint_post">Post</string>
    <string name="add">Add</string>
    <string name="auth_massage">Authentication Successful</string>
    <string name="update_massage">Update Successful</string>
    <string name="update_fail_massage">Failed to update</string>
    <string name="error_wrong_password_massage">Your password is incorrect please input correct password</string>
    <string name="error_wrong_email_massage">Your email is incorrect please input correct email</string>
    <string name="old_password">Old Password</string>
    <string name="medicine_price">Medicine Price</string>
    <string name="self_no">Self no</string>
    <string name="row_no">Row no</string>
    <string name="column_no">Column no</string>
    <string name="medicine_details">Medicine details</string>
    <string name="about_medicine">About Medicine</string>
    <string name="update_medicine_info">Update Medicine Info</string>
    <string name="cancelled">Cancelled</string>
    <string name="about_employee">About Employee</string>
    <string name="employee_email">Employee Email</string>
    <string name="dob">Dob :</string>
    <string name="employee_birthday">Employee birthday</string>
    <string name="post">Post :</string>
    <string name="post_name">Post name</string>
    <string name="phone">Phone :</string>
    <string name="employee_number">Employee Number</string>
    <string name="address">Address:</string>
    <string name="employee_address">Employee Address</string>
    <string name="hint_medicine_name">Medicine Name</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_address">Address</string>
    <string name="no_image">No Image Selected</string>
    <string name="quantity">Quantity</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="call">Call</string>
    <string name="complete">Complete</string>
    <string name="invalid_quantity">Invalid quantity input</string>
    <string name="order_message">Order Successful</string>
    <string name="order_complete">Order Completed</string>

</resources>