<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="3dp"
    android:layout_marginTop="3dp"
    android:layout_marginEnd="2dp"
    android:layout_marginBottom="3dp"
    android:background="@color/offsky"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/medicineItemCard"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/offsky"
        app:cardCornerRadius="@dimen/radius_8"
        app:cardElevation="20dp"
        app:cardMaxElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/name"
                    android:textColor="#1a1a1a"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/medicineListItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/medicine_name"
                    android:textColor="#1a1a1a"
                    android:textAlignment="center"
                    android:textSize="17dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/company"
                    android:textColor="#1a1a1a"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/medicineListItemCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/company_name"
                    android:textColor="#1a1a1a"
                    android:textAlignment="center"
                    android:textSize="17dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemEditeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="@string/edit"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>
</LinearLayout>